[Filebeat][Gsuite] Adds Admin audit Fileset (#19769)
* Add application settings

* Add calendar settings

* Add chat settings

* Add chrome os settings

* Add contacts settings

* Add delegated admin settings

* Add drive

* Add sites

* Add licences settings

* Add groups settings

* Add gmail settings

* Add org settings

* Add security settings and split test files

* Add domain settings

* Add user settings

* Add mobile settings

* Add CHANGELOG entry

* Generate fields.go

--- a/filebeat/docs/fields.asciidoc
+++ b/filebeat/docs/fields.asciidoc
@@ -61465,6 +61465,754 @@ type: keyword
 --
 
 
+*`gsuite.admin.application.edition`*::
++
+--
+The GSuite edition.
+
+type: keyword
+
+--
+
+*`gsuite.admin.application.name`*::
++
+--
+The application's name.
+
+type: keyword
+
+--
+
+*`gsuite.admin.application.enabled`*::
++
+--
+The enabled application.
+
+type: keyword
+
+--
+
+*`gsuite.admin.application.licences_order_number`*::
++
+--
+Order number used to redeem licenses.
+
+type: keyword
+
+--
+
+*`gsuite.admin.application.licences_purchased`*::
++
+--
+Number of licences purchased.
+
+type: keyword
+
+--
+
+*`gsuite.admin.application.id`*::
++
+--
+The application ID.
+
+type: keyword
+
+--
+
+*`gsuite.admin.application.asp_id`*::
++
+--
+The application specific password ID.
+
+type: keyword
+
+--
+
+*`gsuite.admin.application.package_id`*::
++
+--
+The mobile application package ID.
+
+type: keyword
+
+--
+
+*`gsuite.admin.group.email`*::
++
+--
+The group's primary email address.
+
+type: keyword
+
+--
+
+*`gsuite.admin.new_value`*::
++
+--
+The new value for the setting.
+
+type: keyword
+
+--
+
+*`gsuite.admin.old_value`*::
++
+--
+The old value for the setting.
+
+type: keyword
+
+--
+
+*`gsuite.admin.org_unit.name`*::
++
+--
+The organizational unit name.
+
+type: keyword
+
+--
+
+*`gsuite.admin.org_unit.full`*::
++
+--
+The org unit full path including the root org unit name.
+
+type: keyword
+
+--
+
+*`gsuite.admin.setting.name`*::
++
+--
+The setting name.
+
+type: keyword
+
+--
+
+*`gsuite.admin.user_defined_setting.name`*::
++
+--
+The name of the user-defined setting.
+
+type: keyword
+
+--
+
+*`gsuite.admin.setting.description`*::
++
+--
+The setting name.
+
+type: keyword
+
+--
+
+*`gsuite.admin.group.priorities`*::
++
+--
+Group priorities.
+
+type: keyword
+
+--
+
+*`gsuite.admin.domain.alias`*::
++
+--
+The domain alias.
+
+type: keyword
+
+--
+
+*`gsuite.admin.domain.name`*::
++
+--
+The primary domain name.
+
+type: keyword
+
+--
+
+*`gsuite.admin.domain.secondary_name`*::
++
+--
+The secondary domain name.
+
+type: keyword
+
+--
+
+*`gsuite.admin.managed_configuration`*::
++
+--
+The name of the managed configuration.
+
+type: keyword
+
+--
+
+*`gsuite.admin.non_featured_services_selection`*::
++
+--
+Non-featured services selection. For a list of possible values refer to https://developers.google.com/admin-sdk/reports/v1/appendix/activity/admin-application-settings#FLASHLIGHT_EDU_NON_FEATURED_SERVICES_SELECTED
+
+
+type: keyword
+
+--
+
+*`gsuite.admin.field`*::
++
+--
+The name of the field.
+
+type: keyword
+
+--
+
+*`gsuite.admin.resource.id`*::
++
+--
+The name of the resource identifier.
+
+type: keyword
+
+--
+
+*`gsuite.admin.user.email`*::
++
+--
+The user's primary email address.
+
+type: keyword
+
+--
+
+*`gsuite.admin.user.nickname`*::
++
+--
+The user's nickname.
+
+type: keyword
+
+--
+
+*`gsuite.admin.user.birthdate`*::
++
+--
+The user's birth date.
+
+type: date
+
+--
+
+*`gsuite.admin.gateway.name`*::
++
+--
+Gateway name. Present on some chat settings.
+
+type: keyword
+
+--
+
+*`gsuite.admin.chrome_os.session_type`*::
++
+--
+Chrome OS session type.
+
+type: keyword
+
+--
+
+*`gsuite.admin.device.serial_number`*::
++
+--
+Device serial number.
+
+type: keyword
+
+--
+
+*`gsuite.admin.device.id`*::
++
+--
+type: keyword
+
+--
+
+*`gsuite.admin.device.type`*::
++
+--
+Device type.
+
+type: keyword
+
+--
+
+*`gsuite.admin.print_server.name`*::
++
+--
+The name of the print server.
+
+type: keyword
+
+--
+
+*`gsuite.admin.printer.name`*::
++
+--
+The name of the printer.
+
+type: keyword
+
+--
+
+*`gsuite.admin.device.command_details`*::
++
+--
+Command details.
+
+type: keyword
+
+--
+
+*`gsuite.admin.role.id`*::
++
+--
+Unique identifier for this role privilege.
+
+type: keyword
+
+--
+
+*`gsuite.admin.role.name`*::
++
+--
+The role name. For a list of possible values refer to https://developers.google.com/admin-sdk/reports/v1/appendix/activity/admin-delegated-admin-settings
+
+
+type: keyword
+
+--
+
+*`gsuite.admin.privilege.name`*::
++
+--
+Privilege name.
+
+type: keyword
+
+--
+
+*`gsuite.admin.service.name`*::
++
+--
+The service name.
+
+type: keyword
+
+--
+
+*`gsuite.admin.url.name`*::
++
+--
+The website name.
+
+type: keyword
+
+--
+
+*`gsuite.admin.product.name`*::
++
+--
+The product name.
+
+type: keyword
+
+--
+
+*`gsuite.admin.product.sku`*::
++
+--
+The product SKU.
+
+type: keyword
+
+--
+
+*`gsuite.admin.bulk_upload.failed`*::
++
+--
+Number of failed records in bulk upload operation.
+
+type: long
+
+--
+
+*`gsuite.admin.bulk_upload.total`*::
++
+--
+Number of total records in bulk upload operation.
+
+type: long
+
+--
+
+*`gsuite.admin.group.allowed_list`*::
++
+--
+Names of allow-listed groups.
+
+type: keyword
+
+--
+
+*`gsuite.admin.email.quarantine_name`*::
++
+--
+The name of the quarantine.
+
+type: keyword
+
+--
+
+*`gsuite.admin.email.log_search_filter.message_id`*::
++
+--
+The log search filter's email message ID.
+
+type: keyword
+
+--
+
+*`gsuite.admin.email.log_search_filter.start_date`*::
++
+--
+The log search filter's start date.
+
+type: date
+
+--
+
+*`gsuite.admin.email.log_search_filter.end_date`*::
++
+--
+The log search filter's ending date.
+
+type: date
+
+--
+
+*`gsuite.admin.email.log_search_filter.recipient.value`*::
++
+--
+The log search filter's email recipient.
+
+type: keyword
+
+--
+
+*`gsuite.admin.email.log_search_filter.sender.value`*::
++
+--
+The log search filter's email sender.
+
+type: keyword
+
+--
+
+*`gsuite.admin.email.log_search_filter.recipient.ip`*::
++
+--
+The log search filter's email recipient's IP address.
+
+type: ip
+
+--
+
+*`gsuite.admin.email.log_search_filter.sender.ip`*::
++
+--
+The log search filter's email sender's IP address.
+
+type: ip
+
+--
+
+*`gsuite.admin.chrome_licenses.enabled`*::
++
+--
+Licences enabled. For a list of possible values refer to https://developers.google.com/admin-sdk/reports/v1/appendix/activity/admin-org-settings
+
+
+type: keyword
+
+--
+
+*`gsuite.admin.chrome_licenses.allowed`*::
++
+--
+Licences enabled. For a list of possible values refer to https://developers.google.com/admin-sdk/reports/v1/appendix/activity/admin-org-settings
+
+
+type: keyword
+
+--
+
+*`gsuite.admin.oauth2.service.name`*::
++
+--
+OAuth2 service name. For a list of possible values refer to https://developers.google.com/admin-sdk/reports/v1/appendix/activity/admin-security-settings
+
+
+type: keyword
+
+--
+
+*`gsuite.admin.oauth2.application.id`*::
++
+--
+OAuth2 application ID.
+
+type: keyword
+
+--
+
+*`gsuite.admin.oauth2.application.name`*::
++
+--
+OAuth2 application name.
+
+type: keyword
+
+--
+
+*`gsuite.admin.oauth2.application.type`*::
++
+--
+OAuth2 application type. For a list of possible values refer to https://developers.google.com/admin-sdk/reports/v1/appendix/activity/admin-security-settings
+
+
+type: keyword
+
+--
+
+*`gsuite.admin.verification_method`*::
++
+--
+Related verification method. For a list of possible values refer to https://developers.google.com/admin-sdk/reports/v1/appendix/activity/admin-security-settings and https://developers.google.com/admin-sdk/reports/v1/appendix/activity/admin-domain-settings
+
+
+type: keyword
+
+--
+
+*`gsuite.admin.alert.name`*::
++
+--
+The alert name.
+
+type: keyword
+
+--
+
+*`gsuite.admin.rule.name`*::
++
+--
+The rule name.
+
+type: keyword
+
+--
+
+*`gsuite.admin.api.client.name`*::
++
+--
+The API client name.
+
+type: keyword
+
+--
+
+*`gsuite.admin.api.scopes`*::
++
+--
+The API scopes.
+
+type: keyword
+
+--
+
+*`gsuite.admin.mdm.token`*::
++
+--
+The MDM vendor enrollment token.
+
+type: keyword
+
+--
+
+*`gsuite.admin.mdm.vendor`*::
++
+--
+The MDM vendor's name.
+
+type: keyword
+
+--
+
+*`gsuite.admin.info_type`*::
++
+--
+This will be used to state what kind of information was changed. For a list of possible values refer to https://developers.google.com/admin-sdk/reports/v1/appendix/activity/admin-domain-settings
+
+
+type: keyword
+
+--
+
+*`gsuite.admin.email_monitor.dest_email`*::
++
+--
+The destination address of the email monitor.
+
+type: keyword
+
+--
+
+*`gsuite.admin.email_monitor.level.chat`*::
++
+--
+The chat email monitor level.
+
+type: keyword
+
+--
+
+*`gsuite.admin.email_monitor.level.draft`*::
++
+--
+The draft email monitor level.
+
+type: keyword
+
+--
+
+*`gsuite.admin.email_monitor.level.incoming`*::
++
+--
+The incoming email monitor level.
+
+type: keyword
+
+--
+
+*`gsuite.admin.email_monitor.level.outgoing`*::
++
+--
+The outgoing email monitor level.
+
+type: keyword
+
+--
+
+*`gsuite.admin.email_dump.include_deleted`*::
++
+--
+Indicates if deleted emails are included in the export.
+
+type: boolean
+
+--
+
+*`gsuite.admin.email_dump.package_content`*::
++
+--
+The contents of the mailbox package.
+
+type: keyword
+
+--
+
+*`gsuite.admin.email_dump.query`*::
++
+--
+The search query used for the dump.
+
+type: keyword
+
+--
+
+*`gsuite.admin.request.id`*::
++
+--
+The request ID.
+
+type: keyword
+
+--
+
+*`gsuite.admin.mobile.action.id`*::
++
+--
+The mobile device action's ID.
+
+type: keyword
+
+--
+
+*`gsuite.admin.mobile.action.type`*::
++
+--
+The mobile device action's type. For a list of possible values refer to https://developers.google.com/admin-sdk/reports/v1/appendix/activity/admin-mobile-settings
+
+
+type: keyword
+
+--
+
+*`gsuite.admin.mobile.certificate.name`*::
++
+--
+The mobile certificate common name.
+
+type: keyword
+
+--
+
+*`gsuite.admin.mobile.company_owned_devices`*::
++
+--
+The number of devices a company owns.
+
+type: long
+
+--
+
+*`gsuite.admin.distribution.entity.name`*::
++
+--
+The distribution entity value, which can be a group name or an org-unit name. For a list of possible values refer to https://developers.google.com/admin-sdk/reports/v1/appendix/activity/admin-mobile-settings
+
+
+type: keyword
+
+--
+
+*`gsuite.admin.distribution.entity.type`*::
++
+--
+The distribution entity type, which can be a group or an org-unit. For a list of possible values refer to https://developers.google.com/admin-sdk/reports/v1/appendix/activity/admin-mobile-settings
+
+
+type: keyword
+
+--
+
+
 *`gsuite.login.affected_email_address`*::
 +
 --
