Add cloudwatch input into Filebeat configure inputs documentation (#19973)
* Add cloudwatch input into Filebeat configure inputs documentation

--- a/filebeat/docs/filebeat-options.asciidoc
+++ b/filebeat/docs/filebeat-options.asciidoc
@@ -121,3 +121,5 @@ include::inputs/input-tcp.asciidoc[]
 include::inputs/input-udp.asciidoc[]
 
 include::inputs/input-unix.asciidoc[]
+
+include::../../x-pack/filebeat/docs/inputs/input-awscloudwatch.asciidoc[]
