--- a/heartbeat/docs/monitors/monitor-common-options.asciidoc
+++ b/heartbeat/docs/monitors/monitor-common-options.asciidoc
@@ -32,6 +32,14 @@ it is recommended that you set this manually.
 Optional human readable name for this monitor. This value appears in the <<exported-fields,exported fields>>
 as `monitor.name`.
 
+
+[float]
+[[service-name]]
+==== `service_name`
+
+Optional APM service name for this monitor. Corresponds to the `service.name` ECS field. Set this when monitoring an app
+that is also using APM to enable integrations between Uptime and APM data in Kibana.
+
 [float]
 [[monitor-enabled]]
 ==== `enabled`
