[docs] Add topic about stopping Elastic Agent (#19971)
* Add topic about stopping Elastic Agent

* Add systemctl stop command

* Add kill command

* Add missing colon

--- a/x-pack/elastic-agent/docs/elastic-agent.asciidoc
+++ b/x-pack/elastic-agent/docs/elastic-agent.asciidoc
@@ -22,6 +22,8 @@ include::install-elastic-agent.asciidoc[leveloffset=+1]
 
 include::run-elastic-agent.asciidoc[leveloffset=+1]
 
+include::stop-elastic-agent.asciidoc[leveloffset=+1]
+
 include::elastic-agent-command-line.asciidoc[leveloffset=+1]
 
 include::elastic-agent-configuration.asciidoc[leveloffset=+1]
