--- a/x-pack/elastic-agent/CHANGELOG.asciidoc
+++ b/x-pack/elastic-agent/CHANGELOG.asciidoc
@@ -53,6 +53,7 @@
 - Fix issues with merging of elastic-agent.yml and fleet.yml {pull}20026[20026]
 - Unzip failures on Windows 8/Windows server 2012 {pull}20088[20088]
 - Fix failing unit tests on windows {pull}20127[20127]
+- Improve GRPC stop to be more relaxed {pull}20118[20118]
 
 ==== New features
 
