--- a/x-pack/elastic-agent/docs/run-elastic-agent.asciidoc
+++ b/x-pack/elastic-agent/docs/run-elastic-agent.asciidoc
@@ -34,11 +34,18 @@ generate a token. See <<ingest-management-getting-started>> for detailed steps.
 +
 Where `$token` is an enrollment token acquired from {fleet}.
 
+//TODO: Add tabbed panels for platform-specific tabs (waiting for final design)
+
 To start {agent}, run:
+
+// tag::run-agent[]
 [source,shell]
 ----
-./elastic-agent run
+./elastic-agent run <1>
 ----
+<1> On Windows, you must run {agent} under the SYSTEM account if you plan
+to use the {elastic-endpoint} integration.
+// end::run-agent[]
 
 [discrete]
 [[standalone-mode]]
@@ -52,10 +59,7 @@ when you restart your system.
 
 To start {agent} manually, run:
 
-[source,shell]
-----
-./elastic-agent run
-----
+include::run-elastic-agent.asciidoc[tag=run-agent]
 
 If no configuration file is specified, {agent} uses the default configuration,
 `elastic-agent.yml`, which is located in the same directory as {agent}. Specify
